# yt_chat

backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  vercel.json
backend/app/: main.py
backend/app/chat/: engine.py  router.py
backend/app/db/: db.py  models.py
backend/app/onboarding/: engine.py  reader.py  router.py  yt.py  yt_utils.py
backend/app/scripts/: channel_onboarding.py
backend/app/utils/: encoder.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/(routes)/chat/: chat.tsx  page.tsx
frontend/app/(dashboard)/(routes)/conversation/: conversation.tsx  page.tsx
frontend/app/(landing)/: layout.tsx  page.tsx
frontend/app/conversation/: layout.tsx  page.tsx
frontend/app/conversation/c/[id]/: page.tsx
frontend/components/: Sidebar.tsx  add-channel-button.tsx  channel-card.tsx  landing-content.tsx  landing-hero.tsx  landing-navbar.tsx  mobile-sidebar.tsx  search-card-provider.tsx  search-card.tsx  search-combobox.tsx  sidebar.tsx
frontend/components/(landing)/: layout.tsx  page.tsx
frontend/components/ui/: ConversationComponent.tsx  button.tsx
frontend/hooks/: useMessage.tsx  useSearchCard.tsx
frontend/lib/api/: conversation.tsx  yt.tsx
frontend/lib/types/: common.tsx  conversation.tsx  yt.tsx
