[tool.poetry]
name = "yt-chat-backend"
version = "0.1.0"
description = "Backed to chat with any YT channel"
authors = ["t0r0id <bhoumiks5910@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
pydantic = "^2.6.0"
llama-index = "^0.9.41"

[tool.poetry.scripts]
start = "app.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
