[tool.poetry]
name = "yt-chat-backend"
version = "0.1.0"
description = "Backed to chat with any YT channel"
authors = ["t0r0id <bhoumiks5910@gmail.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
pydantic = "^2.6.0"
llama-index = "^0.9.41"
youtube-search-python = "^1.6.6"
beanie = "^1.25.0"
python-dotenv = "^1.0.1"
youtube-transcript-api = "^0.6.2"
tenacity = "^8.2.3"

[tool.poetry.scripts]
start = "app.main:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
